# school-oop-exercises

./: .gitignore  README.md
card-login-exercise/: CMakeLists.txt  card.cpp  card.h  card.ui  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pin.cpp  pin.h  pin.ui  pin_old.cpp  pin_old.h  pin_old.ui
exercise-1/: main.cpp
exercise-2/: game.cpp  game.h  main.cpp
exercise-3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
exercise-4/: bankaccount.cpp  bankaccount.h  creditaccount.cpp  creditaccount.h  customer.cpp  customer.h  main.cpp
exercise-5/: exercise-5.pro  follower.cpp  follower.h  main.cpp  notificator.cpp  notificator.h
exercise-6/: main.cpp  student.cpp  student.h
exercise-7_1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
exercise-7_2/: customqlineedit.cpp  customqlineedit.h  exercise-7_2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
exercise-8/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qt-widget/: mainwindow.cpp  mainwindow.ui
serial-reader-exercise/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
